Added profile viewing

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,7 @@
         <div class="header">
             <h1>RNG</h1>
             <div class="user-info">
+                <a href="/profiles" class="nav-btn">View Profiles</a>
                 <a href="/settings" id="username-display" class="username-link"></a>
                 <button onclick="logout()" class="logout-btn">Logout</button>
             </div>
