--- a/static/style.css
+++ b/static/style.css
@@ -265,6 +265,7 @@ a:hover {
     font-weight: bold;
     font-size: 16px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+}
 
 /* Modifier gradient classes */
 .modifier-holographic {
